<resources>
    <string name="app_name">monitortest</string>

    <!--sharedpreferences-->
    <string name="shared_pref_file">monitortest.PREF_FILE</string>
    <string name="sharedpreference_name_key">monitortest_shared_pref</string>
    <string name="usagestats_permission_is_granted_key">usagestats_permission_is_granted_key</string>
    <string name="network_permission_is_granted_key">network_permission_is_granted_key</string>
    <string name="readInterval">readInterval</string>
    <string name="readIntervalChanged">readIntervalChanged</string>

    <!--menu-->
    <string name="menu_action_cpuinfo">CPU-ra vonatkozó infók</string>
    <string name="menu_action_meminfo">Memóriára vonatkozó infók</string>
    <string name="menu_action_refresh">Frissítés</string>
    <string name="menu_action_setinterval">Olvasási intervallum beállítása</string>
    <string name="menu_action_stop_start">Leállítás/Indítás</string>
    <string name="menu_action_global_network">Globális network adatok követése</string>

    <!--UsageStatsPermissionFragment-->
    <string name="slide_usage_stats_btn_text">Navigálj a settingsbe</string>
    <string name="slide_usage_stats_title_text">Az UsageStats API engedélyezése</string>
    <string name="slide_usage_stats_cant_move_further">A továbblépéshez engedélyezni kell az UsageStats használatát!</string>
    <string name="slide_usage_stats_desc_text">Android Lolipop óta az eddig használt GET_TASKS engedély érvénytelenné vált.
        \nAhhoz, hogy az előtérben futó folyamatokról információt kaphassunk, kell ez az engedély a telefon használatáról.
        \nEz egy rendszer szintű jogosultság, további információ az alábbi linken érhető el:
        \nhttps://developer.android.com/reference/android/Manifest.permission.html </string>

    <!--NetworkPermissionFragment-->
    <string name="slide_network_permission_desc_text">android.permission.ACCESS_WIFI_STATE\nandroid.permission.ACCESS_NETWORK_STATE\nandroid.permission.INTERNET"</string>
    <string name="slide_network_permission_title_text">Internet használattal kapcsolatos API-k engedélyezése</string>
    <string name="slide_network_permission_cant_move_further">A továbblépéshez engedélyezni kell az említett engedélyeket!</string>
    <string name="slide_network_permission_btn_text">Engedélyezem a jogosultságokat</string>

    <!--DescriptionFragment-->
    <string name="slide_description_title_text">MonitorTest</string>
    <string name="slide_description_desc_text">Az alkalmazás a telefonon futó alkalmazásokról jelenít meg információt.
        \nEz három csoportba osztható: cpu, memória, illetve hálózat.
        \nAz app által megjelenített adatokról további információ az adott fragmenten elérhető.
    </string>

    <!--DialogWarning-->
    <string name="dialog_warning_name_key">monitor_dialog_warning</string>
    <string name="dialog_warning_title_text">Figyelmeztetés</string>
    <string name="dialog_warning_desc_text">Engedély nélkül bizonyos funkciók nem működnek megfelelően.</string>

    <!--DialogReadInterval-->
    <string name="dialog_readInterval_title_text">Olvasási intervallum</string>

    <!--DialogCpuInfo-->
    <string name="dialog_cpuinfo_description_text">A grafikon Y tengelye a processzor kihasználtságát jellemzi.
        \nEzek az adatok globálisak, tehát az egész telefonra vonatkoznak, nem egy adott folyamatra.
        <!--
        \nAz X tengely a beállított olvasási intervallumnak megfelelő időegység.
        \nAndroid Marshmallow felett az OS biztonsági frissítésekkel lett ellátva.
        \nEz annyit jelent, hogy az eddig kinyert információk nem olvashatóak ki a procfs mappákból.
        -->
    </string>
    <string name="dialog_cpuinfo_title_text">Hogyan nyerhetőek ki az információk?</string>

    <!--DialogMemInfo-->
    <string name="dialog_meminfo_description_text">
        Android Lollipop óta API-n keresztül közvetlen nem lehet elérni információkat a telefonon futó folyamatokról.
        \nAz itt megjelenő információk egy rendszer szintű jogosultság és debug szkriptek együttes alkalmazásával lettek kinyerve.
        \nA CPU adatokhoz hasonlóan, ezek is globális értékek. Az elérhető folyamatok memóriaigényéről a <b>processes</b> fül nyújt információt.
        \nAz adatokról részletes információ itt található:\n
    </string>
    <string name="dialog_meminfo_description_link">https://www.centos.org/docs/5/html/5.2/Deployment_Guide/s2-proc-meminfo.html</string>
    <string name="dialog_meminfo_title_text">Hogyan nyerhetőek ki az információk?</string>

    <!--IntroActivity-->
    <string name="intro_activity_permission_granted_already">A szükséges engedélyeket már megadtad!</string>

    <!---->
    <string name="graph_data_real_time">Minden adat valósidejű</string>

    <!--CPUFragment-->
    <string name="fragment_cpu_title">CPU adatok</string>

    <!--ProcessFragment-->
    <string name="fragment_process_pid">PID</string>
    <string name="fragment_process_name">Name</string>
    <string name="fragment_process_pkg_name">Package Name</string>

    <!--MEMFragment-->
    <string name="memTotal">Összes fizikai memória KB-ban</string>
    <string name="memFree">A rendszer által nemhasznált fizikai memória KB-ban</string>
    <string name="memBuffers">A fájlpufferek által használt fizikai memória KB-ban</string>
    <string name="memCached">A cache által használt fizikiai memória KB-ban</string>
    <string name="memSReclaimable">A felszabadítható Kernel-beli memóriaegység (slab) értéke KB-ban</string>
    <string name="memUsed">A rendszer által felhasznált memória KB-ban</string>
    <string name="memAvail">A rendszer által felhasználható memória KB-ban</string>
    <string name="memThreshold">Az a küszöbérték, ahol a rendszer kevésnek itéli a memóriát</string>

    <string name="mem_fragment_description">Jelentés</string>
    <string name="mem_fragment_name">Elnevezés</string>

</resources>
