<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_actionStop"
        android:title="@string/menu_action_stop_start">
    </item>
    <item
        android:id="@+id/menu_actionSetInterval"
        android:title="@string/menu_action_setinterval">
    </item>
    <item
        android:id="@+id/menu_actionRefresh"
        android:title="@string/menu_action_refresh">
    </item>

    <item
        android:id="@+id/menu_actionMemInfo"
        android:title="@string/menu_action_meminfo">
    </item>

    <item
        android:id="@+id/menu_actionCpuInfo"
        android:title="@string/menu_action_cpuinfo">
    </item>

    <item
        android:id="@+id/menu_actionGetGlobalNetwork"
        android:title="@string/menu_action_global_network">
    </item>

    <!--TODO menübe switch?-->
    <!--<item
        android:id="@+id/menu_item_switch"
        android:title=""
        app:showAsAction="always"
        app:actionLayout="@layout/menu_switch">
        &lt;!&ndash;app:actionLayout&ndash;&gt;
    </item>-->
</menu>