<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/usagestats_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/slide_usage_stats_title_text"
    />

    <TextView
        android:id="@+id/usagestats_desc"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/slide_usage_stats_desc_text"
    />

    <Button
        android:id="@+id/usagestats_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/slide_usage_stats_btn_text" />
</LinearLayout>
