<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="100">
           <Button
               android:id="@+id/fragment_process_refresh"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="10"
               android:background="@drawable/ic_action_name"
               android:layout_gravity="center"
           />
           <!--android:background="@drawable/ic_refresh_black_24dp"-->
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="10"
               android:text="@string/fragment_process_pid"
               android:textAlignment="center"
               android:layout_gravity="center"
               android:textStyle="bold"
           />
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="30"
               android:text="@string/fragment_process_name"
               android:textAlignment="center"
               android:layout_gravity="center"
               android:textStyle="bold"
            />
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="50"
               android:text="@string/fragment_process_pkg_name"
               android:textAlignment="center"
               android:layout_gravity="center"
               android:textStyle="bold"
            />
       </LinearLayout>

    <ListView
        android:id="@+id/fragment_process_process_list"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"></ListView>


</android.support.v7.widget.LinearLayoutCompat>